--- a/configs/13.yaml
+++ b/configs/13.yaml
@@ -4,6 +4,7 @@ result_dir: ./results
 checkpoint_dir: ./checkpoints/sc
 random_seed: 42
 
+
 # --- Dataset & Paths --- #
 motion_dir: ./dataset/100style/new_joint_vecs
 mean_path: ./checkpoints/t2m/Comp_v6_KLD005/meta/mean.npy
@@ -11,6 +12,8 @@ std_path: ./checkpoints/t2m/Comp_v6_KLD005/meta/std.npy
 style_json: ./dataset/100style/100style_clean_clean.json
 content_json: ./dataset/100style/10content_clean_clean.json
 window_size: 128
+valid_size: 19
+
 
 # --- Sampler Settings --- #
 sampler:
@@ -18,14 +21,16 @@ sampler:
   batch_size: 32
   samples_per_class: 8
 
+
 # --- Training Hyperparameters --- #
-epochs: 50
+epochs: 100
 lr: 0.001
+
 
 # --- Losses --- #
 loss:
   recon:
-    weight: 1.0
+    weight: 10.0
   supcon:
     weight: 1.0
     anchor: true
@@ -35,18 +40,37 @@ loss:
   anchor:
     weight: 1.0
 
+
 # --- Model --- #
 model:
   type: StyleContentNet
   style_content_encoder:
-    type: StyleContentEncoderTwo
+    type: StyleContentEncoderThree
     latent_dim: 128
     n_heads: 4
     dropout: 0.1
     n_layers: 2
   style_content_decoder:
-    type: StyleContentDecoderTwo
+    type: StyleContentDecoderThree
     latent_dim: 128
     n_heads: 4
     dropout: 0.1
     n_layers: 2
+
+
+# --- Early Stopper --- #
+early:
+  patience: 10
+  min_delta: 0.0
+  mode: min
+
+
+# --- Loss Scaler --- #
+loss_scaler:
+  alpha: 0.01          # EMA smoothing factor
+  eps: 1e-8            # small value to avoid div-by-zero
+  warmup: 100          # steps before normalization kicks in
+  mode: rms            # normalization mode: rms | mean | off
+  tau: 1e-3            # floor for denominator (prevents blowups)
+  cap: 20.0            # optional cap on scale factor
+  default_weight: 1.0  # global fallback weight
