--- a/configs/18.yaml
+++ b/configs/18.yaml
@@ -11,6 +11,7 @@ std_path: ./checkpoints/t2m/Comp_v6_KLD005/meta/std.npy
 style_json: ./dataset/100style/100style_clean_clean.json
 content_json: ./dataset/100style/10content_clean_clean.json
 window_size: 128
+valid_size: 19
 
 # --- Sampler Settings --- #
 sampler:
@@ -19,7 +20,7 @@ sampler:
   samples_per_class: 8
 
 # --- Training Hyperparameters --- #
-epochs: 50
+epochs: 100
 lr: 0.001
 
 # --- Losses --- #
@@ -40,13 +41,19 @@ model:
   type: StyleContentNet
   style_content_encoder:
     type: StyleContentEncoderTwo
-    latent_dim: 128
+    latent_dim: 256
     n_heads: 4
     dropout: 0.1
     n_layers: 2
   style_content_decoder:
     type: StyleContentDecoderTwo
-    latent_dim: 128
+    latent_dim: 256
     n_heads: 4
     dropout: 0.1
     n_layers: 2
+
+# --- Early Stopper --- #
+early:
+  patience: 10
+  min_delta: 0.0
+  mode: min
