--- a/configs/delete.yaml
+++ b/configs/delete.yaml
@@ -11,15 +11,17 @@ std_path: ./checkpoints/t2m/Comp_v6_KLD005/meta/std.npy
 style_json: ./dataset/100style/100style_clean_clean.json
 content_json: ./dataset/100style/10content_clean_clean.json
 window_size: 128
+valid_size: 1
 
 # --- Sampler Settings --- #
 sampler:
-  type: StyleSampler
+  type: TwoStyleSampler
   batch_size: 32
-  samples_per_class: 8
+  samples_per_class: 16
+  target_style_labels: [51, 0]
 
 # --- Training Hyperparameters --- #
-epochs: 50
+epochs: 100
 lr: 0.001
 
 # --- Losses --- #
@@ -50,3 +52,10 @@ model:
     n_heads: 4
     dropout: 0.1
     n_layers: 2
+
+
+# --- Early Stopper --- #
+early:
+  patience: 5
+  min_delta: 0.0
+  mode: min
