--- a/configs/delete2.yaml
+++ b/configs/delete2.yaml
@@ -11,15 +11,17 @@ std_path: ./checkpoints/t2m/Comp_v6_KLD005/meta/std.npy
 style_json: ./dataset/100style/100style_clean_clean.json
 content_json: ./dataset/100style/10content_clean_clean.json
 window_size: 128
+valid_size: 1
 
 # --- Sampler Settings --- #
 sampler:
-  type: StyleSampler
+  type: TwoStyleSampler
   batch_size: 32
-  samples_per_class: 8
+  samples_per_class: 16
+  target_style_labels: [51, 0]
 
 # --- Training Hyperparameters --- #
-epochs: 50
+epochs: 100
 lr: 0.001
 
 # --- Losses --- #
@@ -31,7 +33,7 @@ loss:
     anchor: true
     temperature: 0.07
   stylecon:
-    weight: 1.0
+    weight: 10.0
   anchor:
     weight: 1.0
 
@@ -39,14 +41,21 @@ loss:
 model:
   type: StyleContentNet
   style_content_encoder:
-    type: StyleContentEncoderTwo
+    type: StyleContentEncoderThree
     latent_dim: 128
     n_heads: 4
     dropout: 0.1
     n_layers: 2
   style_content_decoder:
-    type: StyleContentDecoderTwo
+    type: StyleContentDecoderThree
     latent_dim: 128
     n_heads: 4
     dropout: 0.1
     n_layers: 2
+
+
+# --- Early Stopper --- #
+early:
+  patience: 10
+  min_delta: 0.0
+  mode: min
