--- a/configs/delete4.yaml
+++ b/configs/delete4.yaml
@@ -11,16 +11,17 @@ std_path: ./checkpoints/t2m/Comp_v6_KLD005/meta/std.npy
 style_json: ./dataset/100style/100style_clean_clean.json
 content_json: ./dataset/100style/10content_clean_clean.json
 window_size: 128
-valid_size: 19
+valid_size: 1
 
 # --- Sampler Settings --- #
 sampler:
-  type: StyleSampler
+  type: TwoStyleSampler
   batch_size: 32
-  samples_per_class: 8
+  samples_per_class: 16
+  target_style_labels: [51, 0]
 
 # --- Training Hyperparameters --- #
-epochs: 100
+epochs: 1000
 lr: 0.001
 
 # --- Losses --- #
@@ -32,7 +33,7 @@ loss:
     anchor: true
     temperature: 0.07
   stylecon:
-    weight: 1.0
+    weight: 5.0
   anchor:
     weight: 1.0
 
@@ -40,17 +41,17 @@ loss:
 model:
   type: StyleContentNet
   style_content_encoder:
-    type: StyleContentEncoderTwo
+    type: StyleContentEncoderFour
     latent_dim: 256
-    n_heads: 4
-    dropout: 0.1
-    n_layers: 2
+    # n_heads: 4
+    # dropout: 0.1
+    # n_layers: 2
   style_content_decoder:
-    type: StyleContentDecoderTwo
+    type: StyleContentDecoderFour
     latent_dim: 256
-    n_heads: 4
-    dropout: 0.1
-    n_layers: 2
+    # n_heads: 4
+    # dropout: 0.1
+    # n_layers: 2
 
 # --- Early Stopper --- #
 early:
