--- a/configs/19.yaml
+++ b/configs/19.yaml
@@ -40,13 +40,13 @@ loss:
 model:
   type: StyleContentNet
   style_content_encoder:
-    type: StyleContentEncoderFive
+    type: StyleContentEncoderTwo
     latent_dim: 256
     n_heads: 4
     dropout: 0.1
     n_layers: 2
   style_content_decoder:
-    type: StyleContentDecoderFive
+    type: StyleContentDecoderTwo
     latent_dim: 256
     n_heads: 4
     dropout: 0.1
