--- a/configs/30.yaml
+++ b/configs/30.yaml
@@ -44,13 +44,13 @@ loss:
 model:
   type: StyleContentNet
   style_content_encoder:
-    type: StyleContentEncoder
+    type: StyleContentEncoder2
     latent_dim: 256
     n_heads: 4
     dropout: 0.1
     n_layers: 2
   style_content_decoder:
-    type: StyleContentDecoder
+    type: StyleContentDecoder2
     latent_dim: 256
     n_heads: 4
     dropout: 0.1
