--- a/configs/new/0.yaml
+++ b/configs/new/0.yaml
@@ -35,13 +35,13 @@ loss:
     temperature: 0.07
   stylecon:
     weight: 1.0
-  # anchor:
-  #   weight: 1.0
+  anchor:
+    weight: 1.0
   # magnitude:
   #   weight: 1.0
 
 # --- Style Encoder --- #
-model:
+style_encoder:
   type: StyleContentNet
   style_content_encoder:
     type: StyleContentEncoderTwo
@@ -55,6 +55,11 @@ model:
     n_heads: 4
     dropout: 0.1
     n_layers: 2
+
+# --- Denoiser --- #
+denoiser:
+  type: Denoiser
+
 
 # --- HyperLoRA --- #
 style_dim: 256
