--- a/configs/encoder/31.yaml
+++ b/configs/encoder/31.yaml
@@ -4,14 +4,14 @@ result_dir: ./results
 checkpoint_dir: ./checkpoints/sc
 random_seed: 42
 
-# --- Dataset --- #
-dataset:
-  motion_dir  : ./dataset/100style/new_joint_vecs
-  text_dir    : ./dataset/100style/texts
-  mean_path   : ./checkpoints/t2m/Comp_v6_KLD005/meta/mean.npy
-  std_path    : ./checkpoints/t2m/Comp_v6_KLD005/meta/std.npy
-  style_json  : ./dataset/100style/100style_clean_clean.json
-  window_size : 64
+# --- Dataset & Paths --- #
+motion_dir: ./dataset/100style/new_joint_vecs
+mean_path: ./checkpoints/t2m/Comp_v6_KLD005/meta/mean.npy
+std_path: ./checkpoints/t2m/Comp_v6_KLD005/meta/std.npy
+style_json: ./dataset/100style/100style_clean_clean.json
+content_json: ./dataset/100style/10content_clean_clean.json
+window_size: 128
+valid_size: 19
 
 # --- Sampler Settings --- #
 sampler:
@@ -22,16 +22,27 @@ sampler:
 # --- Training Hyperparameters --- #
 epochs: 100
 lr: 0.001
-text_drop: 0.1
-style_drop: 0.1
 
 # --- Losses --- #
 loss:
-  diffusion:
-    criterion:
+  recon1:
+    weight: 1.0
+  recon2:
+    weight: 1.0
+  supcon:
+    weight: 1.0
+    anchor: true
+    temperature: 0.07
+  stylecon:
+    weight: 1.0
+  # anchor:
+  #   weight: 1.0
+  # magnitude:
+  #   weight: 1.0
 
-# --- Style Encoder --- #
-style_encoder:
+# --- Model --- #
+model:
+  type: StyleContentNet
   style_content_encoder:
     type: StyleContentEncoderTwo
     latent_dim: 256
@@ -44,20 +55,6 @@ style_encoder:
     n_heads: 4
     dropout: 0.1
     n_layers: 2
-
-# --- Denoiser --- #
-denoiser:
-  lora:
-    type: HyperLoRA
-    rank: 
-    scale:
-    style_dim:
-    in_dim:
-    out_dim:
-    hidden_dim:
-
-# --- HyperLoRA --- #
-style_dim: 256
 
 # --- Early Stopper --- #
 early:
