--- a/configs/105.yaml
+++ b/configs/105.yaml
@@ -11,6 +11,7 @@ dataset:
   mean_path   : ./checkpoints/t2m/Comp_v6_KLD005/meta/mean.npy
   std_path    : ./checkpoints/t2m/Comp_v6_KLD005/meta/std.npy
   style_json  : ./dataset/100style/100style_clean_clean.json
+  content_json: ./dataset/100style/10content_clean_clean.json
   window_size : 64
 
 # --- Sampler Settings --- #
@@ -24,8 +25,7 @@ model:
   denoiser:
     transformer:
       layer:
-        attention: {}
-        film:
+        attention:
           lora:
             type: HyperLoRA
             rank: 8
@@ -33,7 +33,8 @@ model:
             style_dim: 256
             in_dim: 256
             out_dim: 256
-            hidden_dim: 512  
+            hidden_dim: 512
+        film: {}
   style_encoder: 
     type: StyleTransformer
     dropout: 0.1
@@ -46,12 +47,12 @@ model:
       hidden_dim: 256
       num_heads: 8
   text_drop: 0.1
-  scale: 7.5
+  style_drop: 0.0
 
 # --- Losses --- #
 loss:
   velocity:
-    weight: 1.0
+    weight: 10.0
   supcon:
     weight: 1.0
     temperature: 0.07
@@ -70,5 +71,5 @@ scaler:
 
 # --- Training --- #
 epochs: 100
-lr: 0.001
+lr: 0.0001
 valid_size: 0.2
