--- a/configs/26.yaml
+++ b/configs/26.yaml
@@ -16,12 +16,12 @@ valid_size: 19
 # --- Sampler Settings --- #
 sampler:
   type: StyleSampler
-  batch_size: 32
-  samples_per_class: 16
+  batch_size: 128
+  samples_per_class: 8
 
 # --- Training Hyperparameters --- #
 epochs: 100
-lr: 0.001
+lr: 0.0001
 
 # --- Losses --- #
 loss:
@@ -29,28 +29,28 @@ loss:
     weight: 1.0
   supcon:
     weight: 1.0
-    anchor: true
+    anchor: false
     temperature: 0.07
-  stylecon:
-    weight: 1.0
-  anchor:
+  # stylecon:
+  #   weight: 1.0
+  anchor_v2:
     weight: 1.0
 
 # --- Model --- #
 model:
   type: StyleContentNet
   style_content_encoder:
-    type: StyleContentEncoder
+    type: StyleContentEncoderSix
     latent_dim: 256
-    n_heads: 4
+    n_heads: 8
     dropout: 0.1
-    n_layers: 2
+    n_layers: 4
   style_content_decoder:
-    type: StyleContentDecoder
+    type: StyleContentDecoderSix
     latent_dim: 256
-    n_heads: 4
+    n_heads: 8
     dropout: 0.1
-    n_layers: 2
+    n_layers: 4
 
 # --- Early Stopper --- #
 early:
