--- a/configs/33.yaml
+++ b/configs/33.yaml
@@ -16,41 +16,38 @@ valid_size: 19
 # --- Sampler Settings --- #
 sampler:
   type: StyleSampler
-  batch_size: 32
-  samples_per_class: 16
+  batch_size: 128
+  samples_per_class: 8
 
 # --- Training Hyperparameters --- #
 epochs: 100
-lr: 0.001
+lr: 0.0001
 
 # --- Losses --- #
 loss:
-  recon:
+  motion_recon:
     weight: 1.0
-  supcon:
+  supcon_v3:
     weight: 1.0
-    anchor: true
+    anchor: false
     temperature: 0.07
-  stylecon:
-    weight: 1.0
-  anchor:
-    weight: 1.0
+  stylecon_v4:
+    weight: 0.5
 
 # --- Model --- #
 model:
   type: StyleContentNet
   style_content_encoder:
-    type: StyleContentEncoder
-    latent_dim: 256
-    n_heads: 4
+    type: StyleContentEncoderEight
+    latent_dim: 32
+    n_layers: 3
     dropout: 0.1
-    n_layers: 2
   style_content_decoder:
-    type: StyleContentDecoder
-    latent_dim: 256
+    type: StyleContentDecoderEight
+    latent_dim: 32
+    n_layers: 3
     n_heads: 4
     dropout: 0.1
-    n_layers: 2
 
 # --- Early Stopper --- #
 early:
