--- a/configs/108.yaml
+++ b/configs/108.yaml
@@ -52,7 +52,7 @@ model:
 # --- Losses --- #
 loss:
   velocity:
-    weight: 10.0
+    weight: 1.0
   supcon:
     weight: 1.0
     temperature: 0.07
@@ -63,11 +63,9 @@ early:
   min_delta: 0.0
   mode: min
 
-# --- Loss Scaler --- #
-scaler:
-  alpha: 0.01
-  norm_eps: 1e-8
-  warmup_batches: 1000
+# --- Calibration --- #
+steps: 1000
+tau: 1e-3
 
 # --- Training --- #
 epochs: 100
