--- a/configs/106.yaml
+++ b/configs/106.yaml
@@ -47,8 +47,10 @@ model:
       hidden_dim: 256
       num_heads: 8
   text_drop: 0.1
+  text_weight: 7.5
   style_drop: 0.0
-  scale: 7.5
+  style_weight: 1.5
+  # scale: 7.5
 
 # --- Losses --- #
 loss:
