--- a/configs/110.yaml
+++ b/configs/110.yaml
@@ -12,8 +12,9 @@ dataset:
   std_path    : ./checkpoints/t2m/Comp_v6_KLD005/meta/std.npy
   style_json  : ./dataset/100style/100style_clean_clean.json
   content_json: ./dataset/100style/10content_clean_clean.json
-  min_frames  : 64
-  max_frames  : 256
+  unit_length : 4
+  min_frames  : 128
+  max_frames  : 128
 
 # --- Sampler Settings --- #
 sampler:
@@ -48,7 +49,7 @@ model:
       hidden_dim: 256
       num_heads: 8
   text_drop: 0.1
-  style_drop: 0.0
+  style_drop: 0.1
   text_weight: 7.5
   style_weight: 3.5
 
@@ -62,15 +63,15 @@ loss:
 
 # --- Early Stopper --- #
 early:
-  patience: 5
+  patience: 10
   min_delta: 0.0
   mode: min
 
 # --- Calibration --- #
-steps: 1000
+steps: 300
 tau: 0.001
 
 # --- Training --- #
-epochs: 100
+epochs: 10000
 lr: 0.0001
 valid_size: 0.2
