--- a/configs/112.yaml
+++ b/configs/112.yaml
@@ -14,7 +14,7 @@ dataset:
   content_json: ./dataset/100style/10content_clean_clean.json
   unit_length : 4
   min_frames  : 128
-  max_frames  : 128
+  max_frames  : 256
 
 # --- Sampler Settings --- #
 sampler:
@@ -27,16 +27,16 @@ model:
   denoiser:
     transformer:
       layer:
-        attention: {}
-        film:
+        attention:
           lora:
             type: HyperLoRA
             rank: 8
             scale: 1.0
             style_dim: 256
             in_dim: 256
-            out_dim: 512
-            hidden_dim: 512  
+            out_dim: 256
+            hidden_dim: 512
+        film: {}
   style_encoder: 
     type: StyleTransformer
     dropout: 0.1
@@ -51,7 +51,7 @@ model:
   text_drop: 0.1
   style_drop: 0.1
   text_weight: 7.5
-  style_weight: 5.5
+  style_weight: 3.5
 
 # --- Losses --- #
 loss:
