--- a/configs/loss/3.yaml
+++ b/configs/loss/3.yaml
@@ -27,39 +27,39 @@ model:
   denoiser:
     transformer:
       layer:
-        attention:
+        attention: {}
+        film:
           lora:
             type: HyperLoRA
             rank: 8
             scale: 1.0
             style_dim: 256
             in_dim: 256
-            out_dim: 256
-            hidden_dim: 512
-        film: {}
+            out_dim: 512
+            hidden_dim: 512  
   style_encoder: 
     type: StyleTransformer
     dropout: 0.1
     style_dim: 256
-    num_layers: 2
-    num_queries: 4
+    num_layers: 4
+    num_queries: 8
     block:
       dropout: 0.1
       style_dim: 256
-      hidden_dim: 256
+      hidden_dim: 512
       num_heads: 8
   text_drop: 0.1
   style_drop: 0.1
   text_weight: 7.5
-  style_weight: 3.5
+  style_weight: 5.5
 
 # --- Losses --- #
 loss:
   velocity:
-    weight: 2.0
-  # supcon:
-  #   weight: 1.0
-  #   temperature: 0.07
+    weight: 8.0
+  supcon:
+    weight: 1.0
+    temperature: 0.07
 
 # --- Early Stopper --- #
 early:
