--- a/configs/new/3.yaml
+++ b/configs/new/3.yaml
@@ -1,3 +1,4 @@
+# Same as 2.yaml but style masking was messed up so I'm training again to see if there's a difference~
 # --- Run Management --- #
 run_name: auto
 result_dir: ./results
@@ -5,28 +6,41 @@ checkpoint_dir: ./checkpoints/t2sm
 random_seed: 42
 
 # --- Dataset --- #
-dataset:
+dataset_style:
   motion_dir  : ./dataset/100style/new_joint_vecs
   text_dir    : ./dataset/100style/texts
   mean_path   : ./checkpoints/t2m/Comp_v6_KLD005/meta/mean.npy
   std_path    : ./checkpoints/t2m/Comp_v6_KLD005/meta/std.npy
-  style_json  : ./dataset/100style/100style_clean_clean.json
-  content_json: ./dataset/100style/10content_clean_clean.json
+  style_json  : ./dataset/100style/100style_smoodi.json
+  content_json: ./dataset/100style/10content_smoodi.json
   unit_length : 4
-  min_frames  : 128
-  max_frames  : 128
+  min_frames  : 40
+  max_frames  : 196
+  drop_first_frame: True
+  unit_double_prob: 0.3333
+
+dataset_hml:
+  split_base_train: ./dataset/humanml3d/train_random_humanml.txt
+  split_base_valid: ./dataset/humanml3d/valid_random_humanml.txt
+  mean_path       : ./checkpoints/t2m/Comp_v6_KLD005/meta/mean.npy
+  std_path        : ./checkpoints/t2m/Comp_v6_KLD005/meta/std.npy
+  unit_length     : 4
+  min_frames      : 40
+  max_frames      : 196
 
 # --- Sampler Settings --- #
 sampler:
   type: TrainSampler
-  batch_size: 64
-  samples_per_style: 8
+  batch_size: 32
+  samples_per_style: 4
 
 # --- Model --- #
 model:
   denoiser:
     transformer:
       layer:
+        gate:
+          hidden_dim: 512
         attention:
           lora:
             type: StyleLoRA
@@ -36,7 +50,6 @@ model:
             num_layers: 4
             in_dim: 256
             out_dim: 256
-            hidden_dim: 512
             block:
               dropout: 0.1
               style_dim: 256
@@ -53,6 +66,7 @@ model:
       style_dim: 256
       hidden_dim: 512
       num_heads: 8
+      repeats: 2
   text_drop: 0.1
   style_drop: 0.1
   text_weight: 7.5
@@ -60,7 +74,11 @@ model:
 
 # --- Losses --- #
 loss:
-  velocity: 
+  style: 
+    weight: 1.0
+  content:
+    weight: 1.0
+  cycle:
     weight: 1.0
   supcon:
     weight: 1.0
@@ -73,10 +91,10 @@ early:
   mode: min
 
 # --- Calibration --- #
-steps: 300
+steps: 34
 tau: 0.001
 
 # --- Training --- #
-epochs: 500
-lr: 0.0001
-valid_size: 0.10
+epochs: 300
+lr: 0.0002
+valid_size: 0.0
