--- a/configs/new/6.yaml
+++ b/configs/new/6.yaml
@@ -75,8 +75,8 @@ model:
 loss:
   style: 
     weight: 1.0
-  content:
-    weight: 1.0
+  # content:
+  #   weight: 1.0
   cycle:
     weight: 1.0
   supcon:
