--- a/configs/new/10.yaml
+++ b/configs/new/10.yaml
@@ -1,4 +1,3 @@
-# This one is FiLM instead of LoRA into SALAD's cross attention.
 # --- Run Management --- #
 run_name: auto
 result_dir: ./results
@@ -42,7 +41,7 @@ model:
         attention: {}
         film:
           lora:
-            type: StyleLoRA
+            type: HyperLoRA
             rank: 8
             scale: 1.0
             style_dim: 256
@@ -56,7 +55,7 @@ model:
               hidden_dim: 512
               num_heads: 8
   style_encoder:
-    type: AxialStyleEncoder
+    type: StyleMLP
     dropout: 0.1
     style_dim: 256
     num_layers: 4
@@ -69,7 +68,7 @@ model:
   text_drop: 0.1
   style_drop: 0.1
   text_weight: 7.5
-  style_weight: 5.5
+  style_weight: 2.0
 
 # --- Losses --- #
 loss:
@@ -77,8 +76,8 @@ loss:
     weight: 1.0
   # content:
   #   weight: 1.0
-  cycle:
-    weight: 1.0
+  # cycle:
+  #   weight: 1.0
   supcon:
     weight: 1.0
     temperature: 0.07
