--- a/configs/new/11.yaml
+++ b/configs/new/11.yaml
@@ -1,4 +1,3 @@
-# This one is FiLM instead of LoRA into SALAD's cross attention.
 # --- Run Management --- #
 run_name: auto
 result_dir: ./results
@@ -39,24 +38,25 @@ model:
   denoiser:
     transformer:
       layer:
-        attention: {}
-        film:
+        gate:
+          hidden_dim: 512
+        attention:
           lora:
-            type: StyleLoRA
+            type: HyperLoRA
             rank: 8
             scale: 1.0
             style_dim: 256
             num_layers: 4
             in_dim: 256
-            out_dim: 512
-            hidden_dim: 512
+            out_dim: 256
             block:
               dropout: 0.1
               style_dim: 256
               hidden_dim: 512
               num_heads: 8
+        film: {}
   style_encoder:
-    type: AxialStyleEncoder
+    type: StyleMLP
     dropout: 0.1
     style_dim: 256
     num_layers: 4
@@ -69,7 +69,7 @@ model:
   text_drop: 0.1
   style_drop: 0.1
   text_weight: 7.5
-  style_weight: 5.5
+  style_weight: 4.5
 
 # --- Losses --- #
 loss:
@@ -77,8 +77,8 @@ loss:
     weight: 1.0
   # content:
   #   weight: 1.0
-  cycle:
-    weight: 1.0
+  # cycle:
+  #   weight: 1.0
   supcon:
     weight: 1.0
     temperature: 0.07
