--- a/configs/new/12.yaml
+++ b/configs/new/12.yaml
@@ -1,4 +1,3 @@
-# This one is FiLM instead of LoRA into SALAD's cross attention.
 # --- Run Management --- #
 run_name: auto
 result_dir: ./results
@@ -31,8 +30,8 @@ dataset_hml:
 # --- Sampler Settings --- #
 sampler:
   type: TrainSampler
-  batch_size: 32
-  # samples_per_style: 4
+  batch_size: 64
+  samples_per_style: 4
 
 # --- Model --- #
 model:
@@ -42,7 +41,7 @@ model:
         attention: {}
         film:
           lora:
-            type: StyleLoRA
+            type: HyperLoRA
             rank: 8
             scale: 1.0
             style_dim: 256
@@ -69,7 +68,7 @@ model:
   text_drop: 0.1
   style_drop: 0.1
   text_weight: 7.5
-  style_weight: 5.5
+  style_weight: 1.5
 
 # --- Losses --- #
 loss:
@@ -77,8 +76,8 @@ loss:
     weight: 1.0
   # content:
   #   weight: 1.0
-  cycle:
-    weight: 1.0
+  # cycle:
+  #   weight: 1.0
   supcon:
     weight: 1.0
     temperature: 0.07
@@ -96,4 +95,4 @@ tau: 0.001
 # --- Training --- #
 epochs: 300
 lr: 0.0002
-valid_size: 0.0
+valid_size: 0.2
