--- a/configs/new/17.yaml
+++ b/configs/new/17.yaml
@@ -1,4 +1,3 @@
-# This one is FiLM instead of LoRA into SALAD's cross attention.
 # --- Run Management --- #
 run_name: auto
 result_dir: ./results
@@ -32,7 +31,7 @@ dataset_hml:
 sampler:
   type: TrainSampler
   batch_size: 32
-  # samples_per_style: 4
+  samples_per_style: 4
 
 # --- Model --- #
 model:
@@ -69,16 +68,20 @@ model:
   text_drop: 0.1
   style_drop: 0.1
   text_weight: 7.5
-  style_weight: 5.5
+  style_weight: 1.5
 
 # --- Losses --- #
 loss:
   style: 
     weight: 1.0
-  # content:
-  #   weight: 1.0
-  cycle:
+  hml:
+    weight: 0.5
+  cycle_style:
     weight: 1.0
+    normalize: false
+  cycle_hml:
+    weight: 1.0
+    normalize: false
   supcon:
     weight: 1.0
     temperature: 0.07
@@ -94,6 +97,6 @@ steps: 34
 tau: 0.001
 
 # --- Training --- #
-epochs: 300
-lr: 0.0002
-valid_size: 0.0
+epochs: 500
+lr: 0.0001
+valid_size: 0.2
