--- a/configs/new/18.yaml
+++ b/configs/new/18.yaml
@@ -1,4 +1,3 @@
-# This one is FiLM instead of LoRA into SALAD's cross attention.
 # --- Run Management --- #
 run_name: auto
 result_dir: ./results
@@ -31,8 +30,8 @@ dataset_hml:
 # --- Sampler Settings --- #
 sampler:
   type: TrainSampler
-  batch_size: 32
-  # samples_per_style: 4
+  batch_size: 64
+  samples_per_style: 4
 
 # --- Model --- #
 model:
@@ -69,15 +68,12 @@ model:
   text_drop: 0.1
   style_drop: 0.1
   text_weight: 7.5
-  style_weight: 5.5
+  style_weight: 2.5
+  style_enc_guidance: 0.5
 
 # --- Losses --- #
 loss:
   style: 
-    weight: 1.0
-  # content:
-  #   weight: 1.0
-  cycle:
     weight: 1.0
   supcon:
     weight: 1.0
@@ -94,6 +90,6 @@ steps: 34
 tau: 0.001
 
 # --- Training --- #
-epochs: 300
-lr: 0.0002
-valid_size: 0.0
+epochs: 500
+lr: 0.0001
+valid_size: 0.2
