--- a/configs/final/50_supcon.yaml
+++ b/configs/final/50_supcon.yaml
@@ -75,17 +75,9 @@ model:
 loss:
   style: 
     weight: 1.0
-  # hml:
-  #   weight: 0.5
-  # cycle_style:
+  # supcon:
   #   weight: 1.0
-  #   normalize: false
-  # cycle_hml:
-  #   weight: 1.0
-  #   normalize: false
-  supcon:
-    weight: 1.0
-    temperature: 0.07
+  #   temperature: 0.07
 
 # --- Early Stopper --- #
 early:
@@ -100,4 +92,4 @@ tau: 0.001
 # --- Training --- #
 epochs: 500
 lr: 0.0001
-valid_size: 0.2
+valid_size: 0.5
