--- a/configs/final/ours_supcon.yaml
+++ b/configs/final/ours_supcon.yaml
@@ -75,21 +75,13 @@ model:
 loss:
   style: 
     weight: 1.0
-  # hml:
-  #   weight: 0.5
-  # cycle_style:
+  # supcon:
   #   weight: 1.0
-  #   normalize: false
-  # cycle_hml:
-  #   weight: 1.0
-  #   normalize: false
-  supcon:
-    weight: 1.0
-    temperature: 0.07
+  #   temperature: 0.07
 
 # --- Early Stopper --- #
 early:
-  patience: 10
+  patience: 20
   min_delta: 0.0
   mode: min
 
