--- a/configs/new/32.yaml
+++ b/configs/new/32.yaml
@@ -75,17 +75,15 @@ model:
 loss:
   style: 
     weight: 1.0
-  # hml:
-  #   weight: 0.5
-  # cycle_style:
-  #   weight: 1.0
-  #   normalize: false
-  # cycle_hml:
-  #   weight: 1.0
-  #   normalize: false
   supcon:
     weight: 1.0
     temperature: 0.07
+  cycle_style:
+    weight: 1.0
+    normalize: false
+  cycle_hml:
+    weight: 1.0
+    normalize: false
 
 # --- Early Stopper --- #
 early:
